# identity/internal/app/dto/verify_code_request.go
@@ -1,0 +1,5 @@
+package dto
+
+type VerifyCodeRequest struct {
+	VerifyCode string `json:"verifyCode"`
+}
