# identity/internal/app/event/user_created_event.go
@@ -1,6 +1,7 @@
 package event
 
 type UserCreated struct {
-	UserId    int    `json:"userId"`
-	UserEmail string `json:"userEmail"`
+	UserId     int    `json:"userId"`
+	UserEmail  string `json:"userEmail"`
+	VerifyCode string `json:"verifyCode"`
 }
